--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Falcon e-shop</title>
+    <title>BechaKena e-shop</title>
   </head>
   <body>
     <div id="root"></div>
